Shift Ctrl Alt LMB / Ctrl Alt LMB in an empty scene closes / crashes Blender #65059

Closed
opened 2019-05-24 09:47:14 +02:00 by Aurel P. · 12 comments

System Information
Operating system: Windows-10-10.0.16299 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.81

Blender Version
Broken: version: 2.80 (sub 71), branch: blender2.7, commit date: 2019-05-22 21:50, hash: a1ad71304c
Broken also in latest build: 2.80 (sub 72), branch: blender2.7, commit date: 2019-05-23 20:37, hash: b3f96da2e6
Worked: 2.80 (sub 71), branch: blender2.7, commit date: 2019-05-20 22:03, hash: e787700393

Short description of error
Shift Ctrl Alt LMB / Ctrl Alt LMB in an empty scene closes / crashes Blender.
In the default keymap these two combinations are both Select (under 3D View).
However, they do not work like the normal select. For meshes, cameras and lights I have to click exactly on the origin point. Clicking anywhere else doesn't select anything.
If I select and delete everything and try any of these combinations in the scene, Blender crashes.

Exact steps for others to reproduce the error

  1. Open Blender
  2. Load factory defaults
  3. Select all (A) and delete
  4. Shift Ctrl Alt LMB / Ctrl Alt LMB anywhere in the scene
**System Information** Operating system: Windows-10-10.0.16299 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.81 **Blender Version** Broken: version: 2.80 (sub 71), branch: blender2.7, commit date: 2019-05-22 21:50, hash: `a1ad71304c` Broken also in latest build: 2.80 (sub 72), branch: blender2.7, commit date: 2019-05-23 20:37, hash: `b3f96da2e6` Worked: 2.80 (sub 71), branch: blender2.7, commit date: 2019-05-20 22:03, hash: `e787700393` **Short description of error** Shift Ctrl Alt LMB / Ctrl Alt LMB in an empty scene closes / crashes Blender. In the default keymap these two combinations are both Select (under 3D View). However, they do not work like the normal select. For meshes, cameras and lights I have to click exactly on the origin point. Clicking anywhere else doesn't select anything. If I select and delete everything and try any of these combinations in the scene, Blender crashes. **Exact steps for others to reproduce the error** 1. Open Blender 2. Load factory defaults 3. Select all (A) and delete 4. Shift Ctrl Alt LMB / Ctrl Alt LMB anywhere in the scene
Author

Added subscriber: @peticel

Added subscriber: @peticel

Added subscriber: @Gvgeo-1

Added subscriber: @Gvgeo-1

ctx_link was 0xFFFFFFFFFFFFFFDF

>	blender.exe!object_mouse_select_menu(bContext * C, ViewContext * vc, unsigned int * buffer, int hits, const int * mval, bool toggle) Line 1487	C

 	blender.exe!ed_object_select_pick(bContext * C, const int * mval, bool extend, bool deselect, bool toggle, bool obcenter, bool enumerate, bool object) Line 1951	C
 	blender.exe!view3d_select_exec(bContext * C, wmOperator * op) Line 2356	C
 	blender.exe!view3d_select_invoke(bContext * C, wmOperator * op, const wmEvent * event) Line 2387	C
 	blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1407	C
 	blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties) Line 2243	C
 	blender.exe!wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const bool do_debug_handler) Line 2523	C
 	blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2652	C
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2825	C
 	blender.exe!wm_event_do_handlers(bContext * C) Line 3267	C
 	blender.exe!WM_main(bContext * C) Line 420	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 502	C
 	[External Code]	
#define CTX_DATA_BEGIN(C, Type, instance, member) \
  { \
    ListBase ctx_data_list; \
    CollectionPointerLink *ctx_link; \
    CTX_data_##member(C, &ctx_data_list); \     <-----ctx_data_list = {first=0xcccccccccccccccc last=0xcccccccccccccccc }
    for (ctx_link = ctx_data_list.first; ctx_link; ctx_link = ctx_link->next) { \
      Type instance = ctx_link->ptr.data;
`ctx_link` was 0xFFFFFFFFFFFFFFDF ``` > blender.exe!object_mouse_select_menu(bContext * C, ViewContext * vc, unsigned int * buffer, int hits, const int * mval, bool toggle) Line 1487 C blender.exe!ed_object_select_pick(bContext * C, const int * mval, bool extend, bool deselect, bool toggle, bool obcenter, bool enumerate, bool object) Line 1951 C blender.exe!view3d_select_exec(bContext * C, wmOperator * op) Line 2356 C blender.exe!view3d_select_invoke(bContext * C, wmOperator * op, const wmEvent * event) Line 2387 C blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1407 C blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties) Line 2243 C blender.exe!wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const bool do_debug_handler) Line 2523 C blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2652 C blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2825 C blender.exe!wm_event_do_handlers(bContext * C) Line 3267 C blender.exe!WM_main(bContext * C) Line 420 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 502 C [External Code] ``` ``` #define CTX_DATA_BEGIN(C, Type, instance, member) \ { \ ListBase ctx_data_list; \ CollectionPointerLink *ctx_link; \ CTX_data_##member(C, &ctx_data_list); \ <-----ctx_data_list = {first=0xcccccccccccccccc last=0xcccccccccccccccc } for (ctx_link = ctx_data_list.first; ctx_link; ctx_link = ctx_link->next) { \ Type instance = ctx_link->ptr.data; ```
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

However, they do not work like the normal select. For meshes, cameras and lights I have to click exactly on the origin point. Clicking anywhere else doesn't select anything.

Thats the normal behavior for Shift Ctrl Alt LMB / Ctrl Alt LMB, you select using centers in this mode.

If I select and delete everything and try any of these combinations in the scene, Blender crashes.

Cannot reproduce here.

> However, they do not work like the normal select. For meshes, cameras and lights I have to click exactly on the origin point. Clicking anywhere else doesn't select anything. Thats the normal behavior for Shift Ctrl Alt LMB / Ctrl Alt LMB, you select using centers in this mode. > If I select and delete everything and try any of these combinations in the scene, Blender crashes. Cannot reproduce here.
Member

Hm interesting, doesnt happen here...

Hm interesting, doesnt happen here...

Cannot reproduce with linux intel gpu.

Reliably crashes with win10 amg gpu. Checked with 911116e1ba, also broken 2019 05 22 85322737.

it works fine with 2019 05 09 6ef48b1318.

Cannot reproduce with linux intel gpu. Reliably crashes with win10 amg gpu. Checked with 911116e1ba5d5cb63e74c32ba257bc665831c853, also broken 2019 05 22 85322737. it works fine with 2019 05 09 6ef48b1318.
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Can reproduce.

Operating system: Linux-4.18.0-20-generic-x86_64-with-Ubuntu-18.04-bionic 64 Bits
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.14

ED_view3d_project_base(const struct ARegion * ar, struct Base * base) (/home/jacques/blender-git/blender/source/blender/editors/space_view3d/view3d_project.c:104)
object_mouse_select_menu(bContext * C, ViewContext * vc, uint * buffer, int hits, const int * mval, _Bool toggle) (/home/jacques/blender-git/blender/source/blender/editors/space_view3d/view3d_select.c:1502)
ed_object_select_pick(bContext * C, const int * mval, _Bool extend, _Bool deselect, _Bool toggle, _Bool obcenter, _Bool enumerate, _Bool object) (/home/jacques/blender-git/blender/source/blender/editors/space_view3d/view3d_select.c:1951)
view3d_select_exec(bContext * C, wmOperator * op) (/home/jacques/blender-git/blender/source/blender/editors/space_view3d/view3d_select.c:2356)
view3d_select_invoke(bContext * C, wmOperator * op, const wmEvent * event) (/home/jacques/blender-git/blender/source/blender/editors/space_view3d/view3d_select.c:2386)
wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const _Bool poll_only, _Bool use_last_properties) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1407)
wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2243)
wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const _Bool do_debug_handler) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2523)
wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2652)
wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2910)
wm_event_do_handlers(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3267)
WM_main(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm.c:417)
main(int argc, const char ** argv) (/home/jacques/blender-git/blender/source/creator/creator.c:500)
Can reproduce. Operating system: Linux-4.18.0-20-generic-x86_64-with-Ubuntu-18.04-bionic 64 Bits Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.14 ``` ED_view3d_project_base(const struct ARegion * ar, struct Base * base) (/home/jacques/blender-git/blender/source/blender/editors/space_view3d/view3d_project.c:104) object_mouse_select_menu(bContext * C, ViewContext * vc, uint * buffer, int hits, const int * mval, _Bool toggle) (/home/jacques/blender-git/blender/source/blender/editors/space_view3d/view3d_select.c:1502) ed_object_select_pick(bContext * C, const int * mval, _Bool extend, _Bool deselect, _Bool toggle, _Bool obcenter, _Bool enumerate, _Bool object) (/home/jacques/blender-git/blender/source/blender/editors/space_view3d/view3d_select.c:1951) view3d_select_exec(bContext * C, wmOperator * op) (/home/jacques/blender-git/blender/source/blender/editors/space_view3d/view3d_select.c:2356) view3d_select_invoke(bContext * C, wmOperator * op, const wmEvent * event) (/home/jacques/blender-git/blender/source/blender/editors/space_view3d/view3d_select.c:2386) wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const _Bool poll_only, _Bool use_last_properties) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1407) wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2243) wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const _Bool do_debug_handler) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2523) wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2652) wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2910) wm_event_do_handlers(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3267) WM_main(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm.c:417) main(int argc, const char ** argv) (/home/jacques/blender-git/blender/source/creator/creator.c:500) ```
Dalai Felinto self-assigned this 2019-05-24 14:22:32 +02:00

Introduced on 0910932e71 it seems. Looking at it.

Introduced on 0910932e71 it seems. Looking at it.

This issue was referenced by fae5896249

This issue was referenced by fae58962493010f7c9c7d78f79e64165539f4317

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65059
No description provided.