Fix T65059: Crash in empty scenes for context _bases functions

Bug introduced on 0910932e71d2.